--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,6 @@ $RECYCLE.BIN/
 .vscode/launch.json
 .vscode/settings.json
 .vscode/launch.json
+outputs/Standings.txt
+outputs/tabela.jpg
+outputs/Standings.txt
