Breaking out responsibilities
Broken one script into two - one generates the league standings, the other generates average graphs for every team.

Updated ignore file to ignore outputs.

--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,4 @@ $RECYCLE.BIN/
 .vscode/launch.json
 .vscode/settings.json
 .vscode/launch.json
-outputs/Standings.txt
-outputs/tabela.jpg
-outputs/Standings.txt
+outputs/*.*
